syntax = "proto3";

package main;

option go_package = "./";

// Pod 终端执行服务
service PodExecService {
  rpc Exec(stream ExecMessage) returns (stream ExecMessage);
}

// 初始化信息，必须作为第一个发送
message ExecInit {
  string namespace = 1;
  string pod_name = 2;
  string container_name = 3;
  repeated string command = 4;
  bool tty = 5;
}

// 调整终端窗口大小（适用于 TTY 模式）
message ExecResize {
  int32 cols = 1;  // 终端列数
  int32 rows = 2;  // 终端行数
}

// 主消息类型，双向流中传输的内容
message ExecMessage {
  oneof content {
    ExecInit init = 1;         // 初始化连接
    bytes stdin = 2;           // 用户输入
    bytes stdout = 3;          // 标准输出
    bytes stderr = 4;          // 标准错误输出
    ExecResize resize = 5;     // 终端窗口调整
    string error = 6;          // 错误信息
    bool close = 7;            // 请求关闭连接
    string heartbeat = 8;      // 心跳包，可选
  }
}